table alignment fixed

--- a/src/app/views/settings/departments/departments-list/departments-list.component.scss
+++ b/src/app/views/settings/departments/departments-list/departments-list.component.scss
@@ -3,3 +3,16 @@
     overflow: hidden; 
     white-space: nowrap;
 }
+table.departments-table{
+
+        table-layout: fixed;
+
+    .col-description{
+        width: 350px;
+    }
+    .col-admins {
+        width:300px;
+    }
+
+
+}
